<resources>
    <string name="app_name">FinalProjectHCCD340</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>


    <string name="age_label">Age:</string>

    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login_button">LogIn</string>
    <string name="register_button">Register</string>
  <string name="password_hint">Enter your password</string>


  <string name="email_hint">abc123@psu.edu</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>

    <string name="in_ist_switch_label">I am 18 years or older</string>
    <string name="menu_info">Info</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Log In</string>
    <string name="app_info">This app supports class activities for HCDD 340!</string>
    <string name="login_error_title">Unable to login</string>
    <string name="login_error_message">Please retry using correct email and password.</string>
    <string name="last_name_label">Last Name:</string>
    <string name="first_name_label">First Name:</string>
</resources>
